# evgen

./: .eslintrc.js  .gitignore  .mapping.json  .npmignore  .piglet-meta.json  .prettierrc.js  AUTHORS  CONTRIBUTING.md  LICENSE  README.md  a.yaml  jest.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
demo/: evgen.yaml
demo/android_kotlin/: EvgenAnalytics.kt
demo/events/: interfaces.yaml  my_movies.yaml  shared_parameters.yaml
demo/ios/: EvgenAnalytics.swift
demo/md_doc/: actual_events.md  all_events.md  event_interfaces.md
demo/txt_doc/: __global_params.txt  __platform_params.txt  my_movies.txt
docker/: docker-compose.yaml
docker/compilation/: Dockerfile
docker/generation/: Dockerfile
src/: cli.ts  evgen.ts
src/compiler/: compile-file.ts  compile-templates.ts  constants.ts  create-compiler.ts  index.ts  parse-inline-files.ts  register-helpers.ts  register-partials.ts  types.ts
src/evgen/: constants.py  events_checker.py  evgen_config.py  global_types.py  helpers.py
src/helpers/: array.ts  const.ts  custom-parameter.ts  cycle-detection.ts  defined.ts  enum.ts  event-version-parameters.ts  index.ts  logger.ts  object.ts  parameter-case.ts  ref.ts  string.ts  types.ts
src/parsers/: constants.ts  event-parameters.ts  events.ts  global-event-parameters.ts  global-types.ts  index.ts  interface-compatibility.ts  interfaces.ts  platform-parameters.ts  platforms.ts  single-platform-events.ts  yaml-parser.ts
src/types/: data-types.ts  evgen-config.ts  (+3 more)
test_example/: events.yaml  run_evgen.sh
tests/: test_generation.py
(+408 files in other folders)
